# registrator

./: docker-compose.yaml
api/: .dockerignore  Cargo.toml  Dockerfile  Rocket.toml
api/src/: db.rs  main.rs
db/: Dockerfile  init.sql
