[package]
name = "registrator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["postgres_pool"]
